# BinLiquidAI

./: .gitignore  DEPLOYMENT_GUIDE.md  INSTALL.md  KEY_MANAGEMENT.md  Makefile  OBSERVABILITY_AND_SLO.md  QUALIFICATION_MATRIX.md  README.md  SECURITY_BASELINE.md  SUPPORT_BUNDLE.md  UPGRADE_AND_RECOVERY.md  pnpm-lock.yaml  pyproject.toml
apps/operator-panel/src-tauri/: Cargo.toml  tauri.conf.json
apps/operator-panel/src-tauri/resources/binliquid-runtime/: README.txt
apps/operator-panel/src-tauri/src/: bridge.rs  lib.rs  main.rs
benchmarks/: __init__.py  run_ablation.py  run_smoke.py  run_team.py
binliquid/: __init__.py  __main__.py  cli.py
config/: balanced.toml  default.toml  enterprise.toml  lite.toml  research.toml  restricted.toml
docs/: ARCHITECTURE.md  BENCHMARK_PROTOCOL.md  BINLIQUID_V0.2X_KAPSAMLI_DURUM_RAPORU_2026-03-01.md  COMPREHENSIVE_PROJECT_REPORT_2026-03-01.md  CONFIGURATION.md  OPERATIONS_RUNBOOK.md  PRIVACY_MODEL.md  RELEASE_CHECKLIST.md  RELEASE_GATE_v0.2.md  RELEASE_GATE_v0.4.md  RELEASE_GATE_v0.5.md  SECURITY_MODEL.md  SYSTEM_STATE_REPORT_2026-03-03.txt  SYSTEM_STATE_REPORT_2026-03-03_FINAL_v0.4.1.txt  TECHNICAL_SPEC_v2.0.md  UI_RFC_001_operator_panel_v0.5.md  UI_STRATEGY_v0.2.md  V05_FINALIZATION_REPORT_2026-03-03.txt  V0_2X_FOCUSED_TUNING_UPDATE_2026-03-01.md  V0_2_DETAILED_STATUS_REPORT_2026-03-01.md
research/: __init__.py
scripts/: bootstrap_macos.sh  demo_governance_v03.sh  prepare_enterprise_fixture.py
tests/: test_approval_flow.py  test_artifact_outputs.py  test_audit_artifacts.py  test_benchmark_protocol.py  test_benchmark_quality_suite.py  test_cli_smoke.py  test_cli_structured_output.py  test_code_expert.py  test_code_verification_loop.py  test_config_resolve.py  test_energy_schema.py  test_enterprise_cli.py  test_enterprise_qualification.py  test_expert_contracts.py  (+39 more)
(+115 files in other folders)
