[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "binliquid"
version = "0.4.1"
description = "AegisOS v0.4.1 Team Runtime MVP on BinLiquid core"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "BinLiquid Contributors" }
]
dependencies = [
  "pydantic>=2.10.0,<3.0.0",
  "typer>=0.17.0,<1.0.0",
  "rich>=14.0.0,<15.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "ollama>=0.5.0,<1.0.0",
  "psutil>=6.1.0,<7.0.0",
  "cryptography>=44.0.0,<46.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
]
hf = [
  "transformers>=4.45.0,<5.0.0",
  "torch>=2.4.0,<3.0.0",
]

[project.scripts]
binliquid = "binliquid.cli:app"
aegis = "binliquid.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
