[package]
name = "aegisos_operator_panel"
version = "0.5.0-beta.1"
description = "AegisOS BinLiquid Operator Panel"
authors = ["BinLiquid Contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "operator_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["time", "process"] }
time = "=0.3.36"

[dev-dependencies]
tempfile = "3"
